Increase min width to avoid package titles overlapping their boxes

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -2439,7 +2439,7 @@ span.highlighted {
 }
 
 $breakpoint-phone: 640px;
-$breakpoint-desktop: 1200px;
+$breakpoint-desktop: 1500px;
 
 #new_sponsorship_application_container, #edit-sponsor-information {
 
